# CoinFlip

./: CMakeLists.txt  chooselevelscene.cpp  chooselevelscene.h  main.cpp  mainscene.cpp  mainscene.h  mainscene.ui  mycoin.cpp  mycoin.h  mypushbutton.cpp  mypushbutton.h  playscene.cpp  playscene.h
